@@ -1,5 +1,7 @@
-NEXT
+SVN
   - fixed warnings that were still present with -Wextra
+  - added support for command line options --md5, --sha1, etc.
+  - beginning to implement logging of both the partial and the full hash of a file in the same logfile.
 
 0.1.2 alpha (2009-11-04)
   - fixed assertion bug
